--- a/packages/vapor/scss/tables/table-actions.scss
+++ b/packages/vapor/scss/tables/table-actions.scss
@@ -85,6 +85,12 @@
     border-left: $table-border;
   }
 
+  .coveo-table-actions + .coveo-table-actions:last-child {
+    padding-left: 0;
+
+    border-left: none;
+  }
+
   &.mod-align-header .coveo-table-actions:last-child {
     padding-right: $header-padding;
   }
